feat: add outgoing letters support
